Attempt 3 at fixing horizontal scroll on cards

--- a/styles/style.css
+++ b/styles/style.css
@@ -275,7 +275,7 @@ a.content__card-link:focus-visible {
   flex-direction: column;
   gap: 6px;
   line-height: 1;
-  width: 100%;
+  width: 50%;
 }
 
 .content__video-card-title {
@@ -285,7 +285,7 @@ a.content__card-link:focus-visible {
 }
 
 .content__video-card-thumbnail {
-  width: 194px;
+  width: 50%;
   height: auto;
   object-fit: contain;
   object-position: right center;
